# moria

./: .gitignore  README.md  arch.py  basetypes.py  dump_structs.py  linked_list_example.py  main.py  namespace.py  pyproject.toml  setup.cfg  setup.py  tox.ini  util.py  values.py
.github/workflows/: python-package.yml  python-publish.yml  python-tests.yml
examples/: Makefile  dump_structs.py  linked_list_example.py  userlist.c
examples/cprograms/: userlist.c
moria/: basetypes.py  namespace.py  util.py  values.py
moria/parsers/: dwarf.py
parsers/: dwarf.py
src/moria/: arch.py  basetypes.py  namespace.py  pack.py  util.py  values.py
src/moria/parsers/: dwarf.py
tests/: helpers.py  test_basetypes.py  test_dwarf.py  test_namespace.py  test_packer.py  test_util.py  test_values.py
