[metadata]
name = moria-c
version = 0.0.1
author = Joe Connor
author_email = josconno@gmail.com
description = A library for manipulating in-memory C data structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josconno/moria
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = moria
packages = find:
python_requires = >=3.7

[options.packages.find]
where = moria