[metadata]
name = moria-c
version = 0.1.3
author = Joe Connor
author_email = josconno@gmail.com
description = A library for manipulating in-memory C data structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josconno/moria
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir = 
    =src
packages = find:
python_requires = >=3.7
install_requires = 
    pyelftools >=0.27

[options.packages.find]
where = src 